[package]
name = "pullauta"
authors = ["Raphael Stefanini <raphael@routechoices.com>"]
version = "2.9.7"
edition = "2024"
description = "Tool to generates orienteering maps from classified LiDAR data"
readme = "README.md"
repository = "https://github.com/karttapullautin/karttapullautin"
license-file = "LICENSE"
keywords = ["map", "mapping", "lidar", "orienteering", "laz", "las"]
categories = ["command-line-utilities"]
publish = false

[features]
default = ["wasm-nocompat"]

# feature that enables features that would not compile on WASM, but are okay otherwise (eg. native library deps etc)
"wasm-nocompat" = ["zip/zstd"]

[dependencies]
image = { version = "0.25", default-features = false, features = [
	"rayon",
	"png",
	"jpeg",
] }

imageproc = { version = "0.25.0", default-features = false, features = [
	"rayon",
] }

web-time = "1.1"

las = { version = "0.9", features = ["laz", "laz-parallel"] }
rand = "0.9"
rust-ini = "0.21"
rustc-hash = "2.0"
shapefile = { version = "0.7.0" }
tiny-skia = { version = "0.11" }
zip = { version = "5.0", default-features = false, features = [
	"bzip2",
	"deflate",
	"deflate64",
	"lzma",
	# "zstd", # <-- enabled in "wasm-nocompat" feature
] }
log = "0.4"
env_logger = "0.11"

serde = { version = "1", default-features = false, features = ["derive"] }
anyhow = "1"
bincode = { version = "2.0", default-features = false, features = ["std", "serde"] }

bytemuck = { version = "1.23", features = ["derive"] }
